gnome-session/gsm-xsmp-server.h
@@ -52,6 +52,7 @@ GType               gsm_xsmp_server_get_type                       (void);
 
 GsmXsmpServer *     gsm_xsmp_server_new                            (GsmStore      *client_store);
 void                gsm_xsmp_server_start                          (GsmXsmpServer *server);
+void                gsm_xsmp_server_stop_accepting_new_clients     (GsmXsmpServer *server);
 
 G_END_DECLS
 
